unpackaged/main/default/objects/Cost__c/Cost__c.object-meta.xml
<CustomObject>
    <label>Cost</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>