unpackaged/main/default/objects/Cost__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>advpm__Matter__c</referenceTo>
    <relationshipLabel>Costs</relationshipLabel>
    <relationshipName>Costs</relationshipName>
    <type>Lookup</type>
</CustomField>