unpackaged/main/default/objects/Cost__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attachment Expenses</fullName>
            </value>
            <value>
                <fullName>Deposition Costs</fullName>
            </value>
            <value>
                <fullName>Electronic Filing Fees</fullName>
            </value>
            <value>
                <fullName>Filing Fees</fullName>
            </value>
            <value>
                <fullName>Recording Costs</fullName>
            </value>
            <value>
                <fullName>Service of Process</fullName>
            </value>
            <value>
                <fullName>Surety Bond Premiums</fullName>
            </value>
            <value>
                <fullName>Witness Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>